--- a/Pages/Bebidas.xaml
+++ b/Pages/Bebidas.xaml
@@ -7,9 +7,110 @@
              x:Class="Marthas_Coffee_App_Movil.Pages.Bebidas"
              
              Title="Bebidas">
-    
-    <VerticalStackLayout>
+
+    <VerticalStackLayout BackgroundColor="#6A4512">
+        <HorizontalStackLayout Padding="10,10,10,10">
+
+            <!-- Agregamos nuestro logo y definimos su orientación y tamaño -->
+
+            <Image Source="logo.png" HeightRequest="100" WidthRequest="100"  HorizontalOptions="Start"/>
+
+            <!-- Agregamos un label y definimos su color,tamaño,orientacion, y su propiedad text -->
+
+            <Label FontFamily="raleway-boldf" TextColor="#FFFFFF" Margin="40,50,4,4" FontSize="40" FontAttributes="Bold" Text="Bebidas"  VerticalOptions="Center" HeightRequest="100" />
+
+        </HorizontalStackLayout>
+        <Label TextColor="LemonChiffon" HorizontalOptions="Center" FontSize="20" Text="Frias" FontAttributes="Bold"/>
+        <Label/>
+
+        <HorizontalStackLayout>
+            <ImageButton Source="horchata.jpg"
+                         WidthRequest="90"
+                         HeightRequest="90"
+                         CornerRadius="20"
+                         Margin="10,10,10,10"
+                         />
+
+            <ImageButton Source="frape.jpg"
+                         WidthRequest="90"
+                         HeightRequest="90"
+                         CornerRadius="20"
+                         Margin="10,10,10,10"/>
+
+            <ImageButton Source="limonada.jpg"
+                         WidthRequest="90"
+                         HeightRequest="90"
+                         CornerRadius="20"
+                         Margin="10,10,10,10"/>
+
+            <ImageButton Source="licuado.jpg"
+                         WidthRequest="90"
+                         HeightRequest="90"
+                         CornerRadius="20"
+                         Margin="10,10,10,10"/>
+        </HorizontalStackLayout>
+        <Label/>
+        <Label TextColor="LemonChiffon" HorizontalOptions="Center" FontSize="20" Text="Calientes" FontAttributes="Bold"/>
+        <Label/>
+
+        <HorizontalStackLayout>
+            <ImageButton Source="capu.jpg"
+                         WidthRequest="90"
+                         HeightRequest="90"
+                         CornerRadius="20"
+                         Margin="10,10,10,10"
+                         />
+
+            <ImageButton Source="moca.jpg"
+                         WidthRequest="90"
+                         HeightRequest="90"
+                         CornerRadius="20"
+                         Margin="10,10,10,10"/>
+
+            <ImageButton Source="atol.jpg"
+                         WidthRequest="90"
+                         HeightRequest="90"
+                         CornerRadius="20"
+                         Margin="10,10,10,10"/>
+
+            <ImageButton Source="cherry.jpg"
+                         WidthRequest="90"
+                         HeightRequest="90"
+                         CornerRadius="20"
+                         Margin="10,10,10,10"/>
+        </HorizontalStackLayout>
+
+        <Label/>
+        <Label TextColor="LemonChiffon" HorizontalOptions="Center" FontSize="20" Text="Naturales" FontAttributes="Bold"/>
+        <Label/>
+
+        <HorizontalStackLayout>
+            <ImageButton Source="mandarinas.jpg"
+                         WidthRequest="90"
+                         HeightRequest="90"
+                         CornerRadius="20"
+                         Margin="10,10,10,10"
+                         />
+
+            <ImageButton Source="naranja.jpg"
+                         WidthRequest="90"
+                         HeightRequest="90"
+                         CornerRadius="20"
+                         Margin="10,10,10,10"/>
+
+            <ImageButton Source="jamaica.jpg"
+                         WidthRequest="90"
+                         HeightRequest="90"
+                         CornerRadius="20"
+                         Margin="10,10,10,10"/>
+
+            <ImageButton Source="mango.jpg"
+                         WidthRequest="90"
+                         HeightRequest="90"
+                         CornerRadius="20"
+                         Margin="10,10,10,10"/>
+        </HorizontalStackLayout>
 
     </VerticalStackLayout>
-    
+
 </ContentPage>
