--- a/Pages/Postres.xaml
+++ b/Pages/Postres.xaml
@@ -236,12 +236,16 @@
 
         <VerticalStackLayout>
 
-            <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Padding="10,10,10,10">
-                
-                <Button Text="AGREGAR A LA ORDEN" TextColor="Black" CornerRadius="20" />
-                <Button Text="+" Margin="10,10,10,10"/>
-                <Label HorizontalOptions="Center" VerticalOptions="Center" Text="?"/>
-                <Button Text="--" Margin="10,10,10,10" FontAttributes="Bold"/>
+            <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Margin="0,40,0,0">
+
+                <Button FontFamily="raleway-boldf" x:Name="Orden" TextColor="White" BackgroundColor="#D38B1A" Margin="10,10,10,10" Text="AGREGAR A LA ORDEN" HeightRequest="45" WidthRequest="190" CornerRadius="30"/>
+
+                <Button FontFamily="raleway-boldf" x:Name="Mas" TextColor="White" BackgroundColor="#D38B1A" Margin="0,0,0,0" Text="+" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
+
+                <Label Margin="10,0,10,0" HorizontalOptions="Center" VerticalOptions="Center" Text="0" FontAttributes="Bold"/>
+
+                <Button FontFamily="raleway-boldf" x:Name="Menos" TextColor="White" BackgroundColor="#D38B1A" Margin="0,0,10,0" Text="-" HeightRequest="40" WidthRequest="40" CornerRadius="60" FontAttributes="Bold"/>
+
 
             </HorizontalStackLayout>                   
             
