--- a/Pages/Bebidas.xaml
+++ b/Pages/Bebidas.xaml
@@ -8,129 +8,210 @@
              
              Title="Bebidas">
 
-    <VerticalStackLayout BackgroundColor="#6A4512">
-        <HorizontalStackLayout Padding="10,10,10,10">
+    <!-- Definimos el color de fondo de nuestra pagina -->
 
-            <!-- Agregamos nuestro logo y definimos su orientación y tamaño -->
+    <VerticalStackLayout Padding="5,5,5,5" BackgroundColor="#6A4512" >
 
-            <Image Source="logo.png" HeightRequest="100" WidthRequest="100"  HorizontalOptions="Start"/>
+        <!-- Definimos la orientacion y el margin de nuestro VerticalStackLayout -->
 
-            <!-- Agregamos un label y definimos su color,tamaño,orientacion, y su propiedad text -->
+        <VerticalStackLayout HorizontalOptions="StartAndExpand" Margin="5,5,5,5">
 
-            <Label FontFamily="raleway-boldf" TextColor="#FFFFFF" Margin="40,50,4,4" FontSize="40" FontAttributes="Bold" Text="Bebidas"  VerticalOptions="Center" HeightRequest="100" />
-
-        </HorizontalStackLayout>
-        <Label TextColor="LemonChiffon" HorizontalOptions="Center" FontSize="20" Text="Frias" FontAttributes="Bold"/>
-        <Label/>
-
-        <HorizontalStackLayout>
-            <ImageButton Source="horchata.jpg"
-                         WidthRequest="90"
-                         HeightRequest="90"
-                         CornerRadius="20"
-                         Margin="10,10,10,10"
-                         />
-
-            <ImageButton Source="frape.jpg"
-                         WidthRequest="90"
-                         HeightRequest="90"
-                         CornerRadius="20"
-                         Margin="10,10,10,10"/>
-
-            <ImageButton Source="limonada.jpg"
-                         WidthRequest="90"
-                         HeightRequest="90"
-                         CornerRadius="20"
-                         Margin="10,10,10,10"/>
-
-            <ImageButton Source="licuado.jpg"
-                         WidthRequest="90"
-                         HeightRequest="90"
-                         CornerRadius="20"
-                         Margin="10,10,10,10"/>
-        </HorizontalStackLayout>
-
-
-        <HorizontalStackLayout Margin="10,0,10,10">
-
-            <Label TextColor="#FFFFFF"  FontSize="10" Text="Horchata de Banana"  Margin="0,0,0,0" FontAttributes="Bold"/>
-
-            <Label TextColor="#FFFFFF"  FontSize="10"  Text="Frape de Fresa"  Margin="28,0,0,0" FontAttributes="Bold"/>
-
-            <Label TextColor="#FFFFFF"  FontSize="10"  Text="Limonada de Fresa"  Margin="32,0,0,0" FontAttributes="Bold"/>
-
-            <Label TextColor="#FFFFFF"  FontSize="10"  Text="licuado de frutos rojos"  Margin="16,0,0,0" FontAttributes="Bold"/>
-
-        </HorizontalStackLayout>
-
-        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="10,0,10,10">
             <HorizontalStackLayout>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="1,0,0,0" FontAttributes="Bold"/>
+                <!-- Agregamos nuestro logo y definimos su tamaño -->
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="1,0,0,0" FontAttributes="Bold"/>
+                <Image Source="logo.png" HeightRequest="90" WidthRequest="90"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+                <!-- Agregamos un label y definimos su color,fuente,tamaño,su margen,orientacion, sus atributos, y su propiedad text -->
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
+                <Label TextColor="#FFFFFF"  FontFamily="raleway-boldf" FontSize="30"  Margin="5,2,0,0" VerticalOptions="Center" HeightRequest="35" FontAttributes="Bold" Text="Postres"/>
 
             </HorizontalStackLayout>
+
         </VerticalStackLayout>
 
+        <!-- Creamos un VerticalStackLayout y definimos su orientación y padding -->
 
-        <Label/>
-        <Label TextColor="LemonChiffon" HorizontalOptions="Center" FontSize="20" Text="Calientes" FontAttributes="Bold"/>
-        <Label/>
+        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="1,1,1,10">
 
+            <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
 
-        <HorizontalStackLayout>
-            <ImageButton Source="capu.jpg"
-                         WidthRequest="90"
-                         HeightRequest="90"
-                         CornerRadius="20"
-                         Margin="10,10,10,10"
-                         />
+            <Label TextColor="#FFFFFF" FontSize="20" FontAttributes="Bold" Text="Frios" />
 
-            <ImageButton Source="moca.jpg"
-                         WidthRequest="90"
-                         HeightRequest="90"
-                         CornerRadius="20"
-                         Margin="10,10,10,10"/>
+        </VerticalStackLayout>
 
-            <ImageButton Source="atol.jpg"
-                         WidthRequest="90"
-                         HeightRequest="90"
-                         CornerRadius="20"
-                         Margin="10,10,10,10"/>
+        <!-- Creamos un VerticalStackLayout y definimos su orientación y su padding -->
 
-            <ImageButton Source="cherry.jpg"
-                         WidthRequest="90"
-                         HeightRequest="90"
-                         CornerRadius="20" 
-                         Margin="10,10,10,10"/>
-        </HorizontalStackLayout>
+        <VerticalStackLayout HorizontalOptions="CenterAndExpand">
 
-        <HorizontalStackLayout Margin="10,0,10,10">
+            <HorizontalStackLayout>
 
-            <Label TextColor="#FFFFFF"  FontSize="10" Text="Capuchino de Matcha" Margin="0,0,0,0" FontAttributes="Bold"/>
+                <!-- Creamos un ImageButton y definimos sus propiedades -->
 
-            <Label TextColor="#FFFFFF"  FontSize="10"  Text="Moca" Margin="45,0,0,0" FontAttributes="Bold"/>
+                <ImageButton x:Name="Pastel"  Source="horchata.jpg" WidthRequest="80" HeightRequest="80" CornerRadius="20" Margin="5,2,2,5"/>
 
-            <Label TextColor="#FFFFFF"  FontSize="10"  Text="Atol de Elote"  Margin="66,0,0,0" FontAttributes="Bold"/>
+                <!-- Creamos un ImageButton y definimos sus propiedades -->
 
-            <Label TextColor="#FFFFFF"  FontSize="10"  Text="Moca de Cereza"  Margin="39,0,0,0" FontAttributes="Bold"/>
+                <ImageButton x:Name="Mochi"  Source="Frape.jpg" WidthRequest="80" HeightRequest="80" CornerRadius="20" Margin="5,2,2,5"/>
 
-        </HorizontalStackLayout>
+                <!-- Creamos un ImageButton y definimos sus propiedades -->
 
-        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="10,0,10,10">
+                <ImageButton x:Name="Sandwich" Source="limonada.jpg" WidthRequest="80" HeightRequest="80" CornerRadius="20" Margin="5,2,2,5"/>
+
+                <!-- Creamos un ImageButton y definimos sus propiedades -->
+
+                <ImageButton x:Name="TresLeches" Source="licuado.jpg" WidthRequest="80" HeightRequest="80" CornerRadius="20" Margin="5,2,2,5"/>
+
+            </HorizontalStackLayout>
+
+        </VerticalStackLayout>
+
+        <VerticalStackLayout Padding="1,1,1,1" HorizontalOptions="CenterAndExpand">
+
+            <HorizontalStackLayout>
+
+                <Label TextColor="#FFFFFF" FontSize="10" Text="Horchata de Banana"  Margin="0,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF" FontSize="10"  Text="Frape de Fresa"  Margin="10,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF" FontSize="10"  Text="Limonada de Fresa"  Margin="0,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF" FontSize="10"  Text="Frozen"  Margin="20,0,0,0" FontAttributes="Bold"/>
+
+            </HorizontalStackLayout>
+
+        </VerticalStackLayout>
+
+        <VerticalStackLayout HorizontalOptions="CenterAndExpand">
+
+            <HorizontalStackLayout>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+
+            </HorizontalStackLayout>
+
+        </VerticalStackLayout>
+
+        <VerticalStackLayout Padding="1,10,1,10" HorizontalOptions="CenterAndExpand">
+
+            <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
+
+            <Label TextColor="#FFFFFF" FontSize="20" FontAttributes="Bold" Text="Calientes" />
+
+        </VerticalStackLayout>
+
+        <VerticalStackLayout HorizontalOptions="CenterAndExpand">
+
+            <HorizontalStackLayout>
+
+                <ImageButton Source="capu.jpg" WidthRequest="80" HeightRequest="80" CornerRadius="20" Margin="5,2,2,5"/>
+
+                <ImageButton Source="moca.jpg" WidthRequest="80" HeightRequest="80" CornerRadius="20" Margin="5,2,2,5"/>
+
+                <ImageButton Source="atol.jpg" WidthRequest="80" HeightRequest="80" CornerRadius="20" Margin="5,2,2,5"/>
+
+                <ImageButton Source="cherry.jpg" WidthRequest="80" HeightRequest="80" CornerRadius="20" Margin="5,2,2,5"/>
+
+            </HorizontalStackLayout>
+
+        </VerticalStackLayout>
+
+        <VerticalStackLayout HorizontalOptions="CenterAndExpand">
+
+            <HorizontalStackLayout>
+
+                <Label TextColor="#FFFFFF"  FontSize="10" Text="Pastel de helado"  Margin="0,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Mochi"  Margin="36,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Sandwhic de helado"  Margin="33,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Tres leches"  Margin="20,0,0,0" FontAttributes="Bold"/>
+
+            </HorizontalStackLayout>
+
+        </VerticalStackLayout>
+
+        <VerticalStackLayout HorizontalOptions="CenterAndExpand">
+
+            <HorizontalStackLayout>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
+
+            </HorizontalStackLayout>
+
+        </VerticalStackLayout>
+
+        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="1,10,1,10">
+
+            <!-- Agregamos un label y definimos su color,fuente,tamaño,sus atributos, y su propiedad text -->
+
+            <Label TextColor="#FFFFFF" FontSize="20" FontAttributes="Bold" Text="Dulces" />
+
+        </VerticalStackLayout>
+
+        <VerticalStackLayout HorizontalOptions="CenterAndExpand">
+
+            <HorizontalStackLayout>
+
+                <ImageButton Source="mandarinas.jpg" WidthRequest="80" HeightRequest="80" CornerRadius="20" Margin="5,2,2,5"/>
+
+                <ImageButton Source="jamaica.jpg" WidthRequest="80" HeightRequest="80" CornerRadius="20" Margin="5,2,2,5"/>
+
+                <ImageButton Source="mango.jpg" WidthRequest="80" HeightRequest="80" CornerRadius="20" Margin="5,2,2,5"/>
+
+                <ImageButton Source="naranja.jpg" WidthRequest="80" HeightRequest="80" CornerRadius="20" Margin="5,2,2,5"/>
+
+            </HorizontalStackLayout>
+
+        </VerticalStackLayout>
+
+        <VerticalStackLayout HorizontalOptions="CenterAndExpand">
+
+            <HorizontalStackLayout>
+
+                <Label TextColor="#FFFFFF"  FontSize="10" Text="Pastel de chocolate"  Margin="0,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Pastel de dulce"  Margin="10,0,0,0" FontAttributes="Bold" />
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Alfajores"  Margin="40,0,0,0" FontAttributes="Bold"/>
+
+                <Label TextColor="#FFFFFF"  FontSize="10"  Text="Donas"  Margin="40,0,0,0" FontAttributes="Bold"/>
+
+            </HorizontalStackLayout>
+
+        </VerticalStackLayout>
+
+        <VerticalStackLayout HorizontalOptions="CenterAndExpand">
+
             <HorizontalStackLayout>
 
                 <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
@@ -152,72 +233,6 @@
             </HorizontalStackLayout>
         </VerticalStackLayout>
 
-        <Label/>
-        <Label TextColor="LemonChiffon" HorizontalOptions="Center" FontSize="20" Text="Naturales" FontAttributes="Bold"/>
-        <Label/>
-
-        <HorizontalStackLayout>
-            <ImageButton Source="mandarinas.jpg"
-                         WidthRequest="90"
-                         HeightRequest="90"
-                         CornerRadius="20"
-                         Margin="10,10,10,10"
-                         />
-
-            <ImageButton Source="naranja.jpg"
-                         WidthRequest="90"
-                         HeightRequest="90"
-                         CornerRadius="20"
-                         Margin="10,10,10,10"/>
-
-            <ImageButton Source="jamaica.jpg"
-                         WidthRequest="90"
-                         HeightRequest="90"
-                         CornerRadius="20"
-                         Margin="10,10,10,10"/>
-
-            <ImageButton Source="mango.jpg"
-                         WidthRequest="90"
-                         HeightRequest="90"
-                         CornerRadius="20"
-                         Margin="10,10,10,10"/>
-        </HorizontalStackLayout>
-
-        <HorizontalStackLayout Margin="10,0,10,10">
-
-            <Label TextColor="#FFFFFF"  FontSize="10" Text="Jugo de Mnadarina" Margin="0,0,0,0" FontAttributes="Bold"/>
-
-            <Label TextColor="#FFFFFF"  FontSize="10"  Text="Jugo de Naranja" Margin="26,0,0,0" FontAttributes="Bold"/>
-
-            <Label TextColor="#FFFFFF"  FontSize="10"  Text="Jugo de Jamica"  Margin="32,0,0,0" FontAttributes="Bold"/>
-
-            <Label TextColor="#FFFFFF"  FontSize="10"  Text="Jugo de Mango"  Margin="42,0,0,0" FontAttributes="Bold"/>
-
-        </HorizontalStackLayout>
-
-        <VerticalStackLayout HorizontalOptions="CenterAndExpand" Padding="10,0,10,10">
-            <HorizontalStackLayout>
-
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="10,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="60,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="$:"  Margin="50,0,0,0" FontAttributes="Bold"/>
-
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="00.00"  Margin="2,0,0,0" FontAttributes="Bold" />
-
-            </HorizontalStackLayout>
-            
-        </VerticalStackLayout>
-        
         <VerticalStackLayout>
 
             <HorizontalStackLayout HorizontalOptions="CenterAndExpand" Margin="0,40,0,0">
@@ -234,7 +249,6 @@
             </HorizontalStackLayout>
 
         </VerticalStackLayout>
-
     </VerticalStackLayout>
 
 </ContentPage>
