--- a/Pages/Pedido.xaml
+++ b/Pages/Pedido.xaml
@@ -1,12 +1,73 @@
 <?xml version="1.0" encoding="utf-8" ?>
 <ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="Marthas_Coffee_App_Movil.Pages.Pedido"
+             x:Class="Marthas_Coffee_App_Movil.Pages.Pedido" 
              Title="Pedido">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <!-- Definimos el padding del HorizontalStackLayou-->
+
+        <HorizontalStackLayout Padding="10,10,10,10">
+            <!-- Agregamos un label y definimos su color,tamaño,orientacion, y su propiedad text -->
+
+            <Label FontFamily="raleway-boldf" TextColor="#FFFFFF" Margin="4,50,4,4" FontSize="33" FontAttributes="Bold" Text="Bienvenid@" HorizontalOptions="End" VerticalOptions="Center" HeightRequest="99" />
+
+        </HorizontalStackLayout>
+        <!-- Agregamos un label y definimos su color,tamaño,orientacion, y su propiedad text -->
+
+        <Label FontFamily="raleway-boldf" TextColor="#FFFFFF" FontSize="20" HorizontalOptions="Center" FontAttributes="Bold" Text="Estado actual de la orden"/>
+
+        <HorizontalStackLayout HorizontalOptions="CenterAndExpand" VerticalOptions="CenterAndExpand">
+          
+                            <Grid>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto"/>
+                                    <RowDefinition Height="Auto"/>
+                                </Grid.RowDefinitions>
+                <ListView ItemsSource="{Binding ListProducts}" HeightRequest="450" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand" SeparatorVisibility="Default"
+                                  SeparatorColor="#6A4512" Grid.Row="1">
+                                    <ListView.Header>
+                        <Grid BackgroundColor="#D38B1A" HorizontalOptions="CenterAndExpand" ColumnSpacing="10" Padding="10"  VerticalOptions="CenterAndExpand">
+                                            <Grid.ColumnDefinitions>
+                                               
+
+                                                <ColumnDefinition Width="100"/>
+                                                <ColumnDefinition Width="100"/>
+                                                <ColumnDefinition Width="100"/>
+                                                <ColumnDefinition Width="100"/>
+
+                                            </Grid.ColumnDefinitions>
+                                            <Label Text="PLATILLOS" TextColor="#FFFFFF"  VerticalOptions="Center" FontAttributes="Bold"  Grid.Column="0"/>
+                                            <Label Text="BEBIDAS" TextColor="#FFFFFF" FontAttributes="Bold"   VerticalOptions="Center" Grid.Column="1"/>
+                                            <Label Text="POSTRES" TextColor="#FFFFFF" FontAttributes="Bold"   VerticalOptions="Center" Grid.Column="2"/>
+                                            <Label Text="BOCADILLOS" TextColor="#FFFFFF" FontAttributes="Bold"  VerticalOptions="Center" Grid.Column="3"/>
+                                        </Grid>
+                                    </ListView.Header>
+                                    <ListView.ItemTemplate>
+                                        <DataTemplate>
+                                            <ViewCell>
+                                <Grid Padding="10" BackgroundColor="#FFFFFF" ColumnSpacing="10" VerticalOptions="CenterAndExpand" HorizontalOptions="CenterAndExpand">
+                                                    <Grid.RowDefinitions>
+                                        <RowDefinition Height="Auto"/>
+                                                    </Grid.RowDefinitions>
+                                                    <Grid.ColumnDefinitions>
+                                                        <ColumnDefinition Width="100"/>
+                                                         <ColumnDefinition Width="100"/>
+                                                        <ColumnDefinition Width="100"/>
+                                                         <ColumnDefinition Width="100"/>
+                                                    </Grid.ColumnDefinitions>
+                                    <Label  Text="{Binding Platillos}" TextColor="#6A4512"  Grid.Column="0"/>
+                                                    <Label Text="{Binding Bebidas}" TextColor="#6A4512"  Grid.Column="1"/>
+                                                    <Label Text="{Binding Postres}" TextColor="#6A4512"  Grid.Column="2"/>
+                                                    <Label Text="{Binding Bocadillos}" TextColor="#6A4512"  Grid.Column="3"/>
+                                                </Grid>
+                                            </ViewCell>
+                                        </DataTemplate>
+                                    </ListView.ItemTemplate>
+                                </ListView>
+
+                            </Grid>
+    
+        </HorizontalStackLayout>
+
     </VerticalStackLayout>
 </ContentPage>
