--- a/Pages/Postres.xaml
+++ b/Pages/Postres.xaml
@@ -70,13 +70,13 @@
 
             <HorizontalStackLayout>
 
-                <Label TextColor="#FFFFFF" FontSize="10" Text="Pastel de helado"  Margin="0,0,0,0" FontAttributes="Bold"/>
+                <Label TextColor="#FFFFFF" FontSize="10" Text="Postre 1"  Margin="0,0,19,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="Mochi"  Margin="36,0,0,0" FontAttributes="Bold"/>
+                <Label TextColor="#FFFFFF" FontSize="10"  Text="Postre 2"  Margin="36,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="Sandwhic de helado"  Margin="33,0,0,0" FontAttributes="Bold"/>
+                <Label TextColor="#FFFFFF" FontSize="10"  Text="Postre 3"  Margin="40,0,0,0" FontAttributes="Bold"/>
 
-                <Label TextColor="#FFFFFF" FontSize="10"  Text="Tres leches"  Margin="20,0,0,0" FontAttributes="Bold"/>
+                <Label TextColor="#FFFFFF" FontSize="10"  Text="Postre 4"  Margin="55,0,0,0" FontAttributes="Bold"/>
 
             </HorizontalStackLayout>
 
